--- a/astToolFactory/dataframeAccess.ipynb
+++ b/astToolFactory/dataframeAccess.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c2470506",
+   "metadata": {},
+   "source": [
+    "# Access and edit the dataframe\n",
+    "Until Data Wrangler is working normally, use this notebook to do manual edits and investigate the dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "eeddac8d",
@@ -9,7 +18,8 @@
    "source": [
     "from astToolFactory.datacenter import getDataframe\n",
     "\n",
-    "dd= getDataframe(True, None)"
+    "# Use `df` here because it's easier than arguing with the hardcoded identifier in Data Wrangler \n",
+    "df = getDataframe(True, None)"
    ]
   }
  ],
