more pandas, less lambdas

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,16 @@
     "import pandas\n",
     "\n",
     "dataframe = pandas.read_pickle(pathFilenameDataframeAST)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88fd24c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframe.to_pickle(pathFilenameDataframeAST)"
    ]
   }
  ],
