typeSansNone_ast_expr

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "366be730",
+   "metadata": {},
+   "source": [
+    "# load dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6ce12245",
@@ -14,6 +22,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a011323",
+   "metadata": {},
+   "source": [
+    "# save dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "88fd24c2",
@@ -21,6 +37,53 @@
    "outputs": [],
    "source": [
     "# dataframe.to_pickle(pathFilenameDataframeAST)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15818da8",
+   "metadata": {},
+   "source": [
+    "# parse and dump"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8aa0993e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from astToolkit import dump\n",
+    "# import ast\n",
+    "\n",
+    "# source='''\n",
+    "\n",
+    "# '''\n",
+    "\n",
+    "# print(dump(ast.parse(source, type_comments=True), indent=None))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bffa2d3",
+   "metadata": {},
+   "source": [
+    "# eval and unparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cefb0c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# source='''\n",
+    "\n",
+    "# '''\n",
+    "\n",
+    "# print(ast.unparse(ast.Module([eval(source)])))"
    ]
   }
  ],
