--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -58,10 +58,9 @@
     "# import ast\n",
     "\n",
     "# source='''\n",
-    "\n",
     "# '''\n",
     "\n",
-    "# print(dump(ast.parse(source, type_comments=True), indent=None))\n"
+    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=True))\n"
    ]
   },
   {
@@ -79,8 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import ast\n",
     "# source='''\n",
-    "\n",
     "# '''\n",
     "\n",
     "# print(ast.unparse(ast.Module([eval(source)])))"
