refactor: rename DictionaryTypeAliasAttribute to DictionaryTypeAliasElements and update related code fix: update dataframeViewer notebook to suppress empty output in dump refactor: replace lambda functions with named functions in factory.py for clarity chore: reorganize pyproject.toml for better readability and update dependencies

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -60,7 +60,7 @@
     "# source='''\n",
     "# '''\n",
     "\n",
-    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=True))\n"
+    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=False))"
    ]
   },
   {
