--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -78,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from astToolkit import Make\n",
     "# import ast\n",
     "# source='''\n",
     "# '''\n",
