--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -54,13 +54,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from astToolkit import dump\n",
-    "# import ast\n",
+    "from astToolkit import dump\n",
+    "import ast\n",
+    "import sys\n",
+    "source='''\n",
+    "match sys.version_info:\n",
+    "    case version if version >= (3, 11):\n",
+    "        True\n",
+    "'''\n",
     "\n",
-    "# source='''\n",
-    "# '''\n",
-    "\n",
-    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=False))"
+    "print(dump(ast.parse(source, type_comments=True), indent=2, show_empty=False))"
    ]
   },
   {
