finish automating `makeToolMake`. remove `makeJoinClassmethod`. add explicit 'attributeRename' to `updateDataframe`.

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
     "# source='''\n",
     "# '''\n",
     "\n",
-    "# print(dump(ast.parse(source, type_comments=True), indent=2, show_empty=False))"
+    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=False))"
    ]
   },
   {
