fix: guard on python versions, `Make` and `Grab`. Under construction: `ClassIsAndAttribute` and `DOT`.

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -41,6 +41,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d7e2c1a",
+   "metadata": {},
+   "source": [
+    "# load edited dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4856861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from astToolFactory.datacenter import getDataframe, _sortCaseInsensitive\n",
+    "# import numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "15818da8",
    "metadata": {},
    "source": [
