fix: logic wasn't capturing all overloads or python version guards if `pythonMinimumVersionMinor` < 12. `getElementsClassIsAndAttribute` is more idiomatically pandas. `makeToolClassIsAndAttribute` implements match-case.

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -54,8 +54,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from astToolFactory.datacenter import getDataframe, _sortCaseInsensitive\n",
-    "# import numpy"
+    "# from astToolFactory import pythonMinimumVersionMinor\n",
+    "# from astToolFactory.datacenter import (\n",
+    "# \t_sortCaseInsensitive, getDataframe,# pyright: ignore[reportPrivateUsage]\n",
+    "# )\n",
+    "# import numpy\n",
+    "# import pandas\n",
+    "\n",
+    "# includeDeprecated: bool = False\n",
+    "# versionMinorMaximum: int | None = None\n",
+    "\n",
+    "# Add function code here:\n"
    ]
   },
   {
