pandas idiomatic `getElementsTypeAlias`

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -56,15 +56,16 @@
    "source": [
     "# from astToolFactory import pythonMinimumVersionMinor\n",
     "# from astToolFactory.datacenter import (\n",
-    "# \t_sortCaseInsensitive, getDataframe,# pyright: ignore[reportPrivateUsage]\n",
+    "# _sortCaseInsensitive, getDataframe,# pyright: ignore[reportPrivateUsage]\n",
     "# )\n",
+    "# from astToolkit import Make, dump\n",
     "# import numpy\n",
     "# import pandas\n",
     "\n",
     "# includeDeprecated: bool = False\n",
     "# versionMinorMaximum: int | None = None\n",
     "\n",
-    "# Add function code here:\n"
+    "# # Add function code here:\n"
    ]
   },
   {
