--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.3)",
    "language": "python",
    "name": "python3"
   },
