back to if/else for python version guards. https://github.com/microsoft/pylance-release/issues/7309

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astToolFactory.datacenter import pathFilenameDataframeAST\n",
+    "from astToolFactory import settingsPackageToManufacture\n",
     "import pandas\n",
     "\n",
-    "dataframe = pandas.read_pickle(pathFilenameDataframeAST)"
+    "dataframe = pandas.read_pickle(settingsPackageToManufacture.pathFilenameDataframeAST)"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataframe.to_pickle(pathFilenameDataframeAST)"
+    "# dataframe.to_pickle(settingsPackageToManufacture.pathFilenameDataframeAST)"
    ]
   },
   {
