Consolidate MANY settings into dataclasses `PackageSettings` and `ManufacturedPackageSettings(PackageSettings)`. Datacenter: deduplication via `_makeColumn_guardVersion`

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -15,10 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astToolFactory import settingsPackageToManufacture\n",
+    "from astToolFactory import settingsManufacturing\n",
     "import pandas\n",
     "\n",
-    "dataframe = pandas.read_pickle(settingsPackageToManufacture.pathFilenameDataframeAST)"
+    "dataframe: pandas.DataFrame = pandas.read_pickle(settingsManufacturing.pathFilenameDataframeAST)"
    ]
   },
   {
@@ -36,7 +36,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataframe.to_pickle(settingsPackageToManufacture.pathFilenameDataframeAST)"
+    "# dataframe.to_pickle(settingsManufacturing.pathFilenameDataframeAST)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e41fec5",
+   "metadata": {},
+   "source": [
+    "# did the dataframe change?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3119af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import numpy\n",
+    "# stem: str = settingsManufacturing.pathFilenameDataframeAST.stem + ' copy'\n",
+    "# pathFilenameCopy = settingsManufacturing.pathFilenameDataframeAST.with_stem(stem)\n",
+    "# dataframeCopy: pandas.DataFrame = pandas.read_pickle(pathFilenameCopy)\n",
+    "# print(numpy.array_equal(dataframe, dataframeCopy))"
    ]
   },
   {
@@ -54,18 +76,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from astToolFactory import pythonMinimumVersionMinor\n",
-    "# from astToolFactory.datacenter import (\n",
-    "# _sortCaseInsensitive, getDataframe,# pyright: ignore[reportPrivateUsage]\n",
-    "# )\n",
-    "# from astToolkit import Make, dump\n",
+    "# from astToolFactory import settingsManufacturing\n",
+    "# from astToolFactory.datacenter import _sortCaseInsensitive, getDataframe  # pyright: ignore[reportPrivateUsage]\n",
+    "# from astToolkit import dump, Make\n",
     "# import numpy\n",
     "# import pandas\n",
     "\n",
     "# includeDeprecated: bool = False\n",
     "# versionMinorMaximum: int | None = None\n",
     "\n",
-    "# # Add function code here:\n"
+    "# # Add function code here:"
    ]
   },
   {
@@ -90,7 +110,7 @@
     "# source='''\n",
     "# '''\n",
     "\n",
-    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=False))"
+    "# print(dump(ast.parse(source, type_comments=True), indent=4, show_empty=False))"
    ]
   },
   {
