Add data processing utilities and update dataframe handling
- Introduced `datacenter_annex.py` with column definitions and mapping dictionaries for attributes.
- Updated `datacenter.py` to utilize new mappings and improved dataframe operations.
- Changed axis parameter in dataframe apply methods for consistency.

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -55,10 +55,11 @@
    "outputs": [],
    "source": [
     "# import numpy\n",
+    "\n",
     "# stem: str = settingsManufacturing.pathFilenameDataframeAST.stem + ' copy'\n",
     "# pathFilenameCopy = settingsManufacturing.pathFilenameDataframeAST.with_stem(stem)\n",
     "# dataframeCopy: pandas.DataFrame = pandas.read_pickle(pathFilenameCopy)\n",
-    "# print(numpy.array_equal(dataframe, dataframeCopy))"
+    "# print(f\"{numpy.array_equal(dataframe, dataframeCopy) = }\")"
    ]
   },
   {
@@ -153,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
