parse ast.pyi stub into match_args. slowly.

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "# from astToolFactory import settingsManufacturing\n",
-    "# from astToolFactory.datacenter import _sortCaseInsensitive, getDataframe  # pyright: ignore[reportPrivateUsage]\n",
+    "# from astToolFactory._datacenter import _sortCaseInsensitive, getDataframe  # pyright: ignore[reportPrivateUsage]\n",
     "# from astToolkit import dump, Make\n",
     "# import numpy\n",
     "# import pandas\n",
@@ -104,18 +104,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astToolkit import dump\n",
-    "import ast\n",
-    "import sys\n",
+    "# from astToolkit import dump\n",
+    "# import ast\n",
+    "# import sys\n",
     "\n",
-    "source='''\n",
-    "if sys.version_info >= (3, 13):\n",
-    "    __match_args__ = (\"name\", \"default_value\")\n",
-    "else:\n",
-    "    __match_args__ = (\"name\",)\n",
-    "'''\n",
+    "# source='''\n",
+    "# '''\n",
     "\n",
-    "print(dump(ast.parse(source, type_comments=True), indent=1, show_empty=False))"
+    "# print(dump(ast.parse(source, type_comments=True), indent=4, show_empty=False))"
    ]
   },
   {
