--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -72,21 +72,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c4856861",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from astToolFactory import settingsManufacturing\n",
-    "# from astToolFactory._datacenter import _sortCaseInsensitive, getDataframe  # pyright: ignore[reportPrivateUsage]\n",
-    "# from astToolkit import dump, Make\n",
-    "# import numpy\n",
-    "# import pandas\n",
+    "from astToolFactory import settingsManufacturing\n",
+    "from astToolFactory._datacenter import _makeColumn_guardVersion, _sortCaseInsensitive, getDataframe  # pyright: ignore[reportPrivateUsage]\n",
+    "from astToolkit import dump, Make\n",
+    "import numpy\n",
+    "import pandas\n",
+    "import pandas as pd\n",
     "\n",
-    "# includeDeprecated: bool = False\n",
-    "# versionMinorMaximum: int | None = None\n",
+    "# Add function code here:\n",
     "\n",
-    "# # Add function code here:"
+    "listColumnsHARDCODED: list[str] = ['attribute', 'TypeAlias_hasDOTSubcategory', 'versionMinorMinimumAttribute', 'type_ast_expr', 'type', 'TypeAlias_hasDOTIdentifier', 'canBeNone',]\n",
+    "listColumns: list[str] = listColumnsHARDCODED\n",
+    "del listColumnsHARDCODED\n",
+    "\n",
+    "sortBy: list[str] = listColumns[0:3]\n",
+    "caseInsensitive: list[bool] = [True, True, False]\n",
+    "ascending: list[bool] = caseInsensitive.copy()\n",
+    "drop_duplicates: list[str] = listColumns[0:2]\n",
+    "\n",
+    "index_type: int = 4\n",
+    "index_type_ast_expr: int = 3\n",
+    "index_versionMinorMinimum: int = 2\n",
+    "\n",
+    "dataframe: pandas.DataFrame = (getDataframe()\n",
+    "    .query(\"attributeKind == '_field'\")\n",
+    "    .pipe(_sortCaseInsensitive, sortBy, caseInsensitive, ascending)\n",
+    "    [listColumns]\n",
+    "    .drop_duplicates(drop_duplicates, keep='last')\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "\n",
+    "dataframe.rename(columns = {\n",
+    "        listColumns[index_type]: 'type',\n",
+    "        listColumns[index_type_ast_expr]: 'type_ast_expr',\n",
+    "        listColumns[index_versionMinorMinimum]: 'versionMinorMinimum',\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "del listColumns\n",
+    "\n",
+    "elementsTarget: list[str] = ['identifierTypeOfNode', 'overloadDefinition', 'canBeNone', 'attribute', 'list_ast_expr', 'guardVersion', 'versionMinorMinimum']\n",
+    "\n",
+    "dataframe['identifierTypeOfNode'] = dataframe['TypeAlias_hasDOTSubcategory'].where(\n",
+    "    dataframe['attribute'].map(dataframe['attribute'].value_counts()) > 1\n",
+    "    , dataframe['TypeAlias_hasDOTIdentifier']\n",
+    ")\n",
+    "dataframe['overloadDefinition'] = dataframe['attribute'].map(dataframe['attribute'].value_counts()) > 1\n",
+    "dataframe['list_ast_expr'] = dataframe['type_ast_expr'].apply(lambda srsly: [srsly]) # pyright: ignore[reportUnknownLambdaType, reportUnknownArgumentType]\n",
+    "\n",
+    "currentColumns: list[str] = [\n",
+    "    'TypeAlias_hasDOTIdentifier',\n",
+    "    'identifierTypeOfNode',\n",
+    "    'overloadDefinition',\n",
+    "    'canBeNone',\n",
+    "    'attribute',\n",
+    "    'list_ast_expr',\n",
+    "    'versionMinorMinimum',\n",
+    "]\n",
+    "dataframe = dataframe[currentColumns]\n"
    ]
   },
   {
