--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -105,12 +105,11 @@
    "source": [
     "# from astToolkit import dump\n",
     "# import ast\n",
-    "# import sys\n",
     "\n",
     "# source='''\n",
     "# '''\n",
     "\n",
-    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=False))"
+    "# print(dump(ast.parse(source, type_comments=True), indent=4, show_empty=False))"
    ]
   },
   {
