housekeeping after typeshed fix.

--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -22,6 +22,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f48bd21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframe = dataframe[~((dataframe['match_args'] != ()) & (dataframe['attribute'] == \"No\"))]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8a011323",
    "metadata": {},
