--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2f48bd21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataframe = dataframe[~((dataframe['match_args'] != ()) & (dataframe['attribute'] == \"No\"))]"
+    "dataframe = dataframe[~((dataframe['match_args'] != ()) & (dataframe['attribute'] == \"No\"))]"
    ]
   },
   {
@@ -41,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "88fd24c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataframe.to_pickle(settingsManufacturing.pathFilenameDataframeAST)"
+    "dataframe.to_pickle(settingsManufacturing.pathFilenameDataframeAST)"
    ]
   },
   {
