--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2f48bd21",
    "metadata": {},
    "outputs": [],
@@ -41,61 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "88fd24c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataframe.to_pickle(settingsManufacturing.pathFilenameDataframeAST)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e41fec5",
-   "metadata": {},
-   "source": [
-    "# did the dataframe change?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3119af4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import numpy\n",
-    "\n",
-    "# stem: str = settingsManufacturing.pathFilenameDataframeAST.stem + ' copy'\n",
-    "# pathFilenameCopy = settingsManufacturing.pathFilenameDataframeAST.with_stem(stem)\n",
-    "# dataframeCopy: pandas.DataFrame = pandas.read_pickle(pathFilenameCopy)\n",
-    "# print(f\"{numpy.array_equal(dataframe, dataframeCopy) = }\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d7e2c1a",
-   "metadata": {},
-   "source": [
-    "# load edited dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4856861",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from astToolFactory import settingsManufacturing\n",
-    "# from astToolFactory._datacenter import _makeColumn_guardVersion, _sortCaseInsensitive, getDataframe  # pyright: ignore[reportPrivateUsage]\n",
-    "# from astToolkit import dump, Make\n",
-    "# import numpy\n",
-    "# import pandas\n",
-    "# import pandas as pd\n",
-    "\n",
-    "# # Add function code here:\n",
-    "\n"
    ]
   },
   {
@@ -119,7 +70,7 @@
     "# source='''\n",
     "# '''\n",
     "\n",
-    "# print(dump(ast.parse(source, type_comments=True), indent=4, show_empty=False))"
+    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=False, annotate_fields=False))"
    ]
   },
   {
