--- a/astToolFactory/dataframeViewer.ipynb
+++ b/astToolFactory/dataframeViewer.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe = dataframe[~((dataframe['match_args'] != ()) & (dataframe['attribute'] == \"No\"))]"
+    "# dataframe = dataframe[~((dataframe['match_args'] != ()) & (dataframe['attribute'] == \"No\"))]"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe.to_pickle(settingsManufacturing.pathFilenameDataframeAST)"
+    "# dataframe.to_pickle(settingsManufacturing.pathFilenameDataframeAST)"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "# source='''\n",
     "# '''\n",
     "\n",
-    "# print(dump(ast.parse(source, type_comments=True), indent=None, show_empty=False, annotate_fields=False))"
+    "# print(dump(ast.parse(source, type_comments=True), indent=4, show_empty=False, annotate_fields=True))"
    ]
   },
   {
@@ -90,10 +90,12 @@
    "source": [
     "# from astToolkit import Make\n",
     "# import ast\n",
+    "\n",
     "# source='''\n",
     "# '''\n",
     "\n",
-    "# print(ast.unparse(ast.Module([eval(source)])))"
+    "# print(ast.unparse(ast.Module([eval(source)])))\n",
+    "\n"
    ]
   }
  ],
