--- a/astToolFactory/datacenter/dataframeViewer.ipynb
+++ b/astToolFactory/datacenter/dataframeViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6ce12245",
    "metadata": {},
    "outputs": [],
@@ -18,67 +18,7 @@
     "from astToolFactory import settingsManufacturing\n",
     "import pandas\n",
     "\n",
-    "dataframe: pandas.DataFrame = pandas.read_pickle(settingsManufacturing.pathFilenameDataframeAST)\n",
-    "dataframe = dataframe.drop(columns=['list4TypeAlias_subcategoryNames'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f48bd21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from astToolkit import identifierDotAttribute\n",
-    "from hunterMakesPy import raiseIfNone\n",
-    "from itertools import chain\n",
-    "from pprint import pprint\n",
-    "from typing import Any\n",
-    "import ast\n",
-    "\n",
-    "dictionary_astClasses: dict[str, Any] = {}\n",
-    "\n",
-    "for astClass in [C for C in [ast.AST, *chain(*(c.__subclasses__() for c in [ast.AST, ast.Constant, *ast.AST.__subclasses__()]))] if issubclass(C, ast.AST)]:\n",
-    "\tidentifierClass: str = astClass.__name__\n",
-    "\tidentifierDotClass: identifierDotAttribute = f'`ast.{identifierClass}`'\n",
-    "\tsubclassList: list[str] = sorted([c.__name__ for c in astClass.__subclasses__() if issubclass(c, ast.AST)], key=lambda s: s.lower())\n",
-    "\tmatchesClasses: list[identifierDotAttribute] = list(dict.fromkeys([identifierDotClass, *[f'`ast.{name}`' for name in subclassList]]))\n",
-    "\tparentClass: identifierDotAttribute = raiseIfNone(raiseIfNone(astClass.__base__).__name__)\n",
-    "\n",
-    "\tdictionary_astClasses[identifierClass] = {\n",
-    "\t\t'ClassDefIdentifier': identifierClass,\n",
-    "\t\t'versionMajorPythonInterpreter': 3,\n",
-    "\t\t'versionMinorPythonInterpreter': 14,\n",
-    "\t\t'versionMicroPythonInterpreter': 2,\n",
-    "\t\t'base': parentClass,\n",
-    "\t}\n",
-    "\n",
-    "del dictionary_astClasses['EnhancedAST']\n",
-    "\n",
-    "list_astClasses = list(dictionary_astClasses.values())\n",
-    "# pprint(list_astClasses, width=200, compact=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49bb67e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add\n",
-    "dataframe = pandas.concat([dataframe, pandas.DataFrame(list_astClasses)], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04d74abf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill missing values in 'kwarg_annotationIdentifier' column with 'No'\n",
-    "dataframe['kwarg_annotationIdentifier'] = dataframe['kwarg_annotationIdentifier'].fillna('No')"
+    "dataframe: pandas.DataFrame = pandas.read_pickle(settingsManufacturing.pathFilenameDataframeAST)\n"
    ]
   },
   {
@@ -91,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "88fd24c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe.to_pickle(settingsManufacturing.pathFilenameDataframeAST)"
+    "# dataframe.to_pickle(settingsManufacturing.pathFilenameDataframeAST)"
    ]
   },
   {
@@ -144,7 +84,7 @@
     "# source='''\n",
     "# '''\n",
     "\n",
-    "# print(ast.unparse(ast.Module([eval(source)])))\n",
+    "# print(ast.unparse(Make.Module([eval(source)])))\n",
     "\n"
    ]
   }
