--- a/astToolFactory/datacenter/dataframeViewer.ipynb
+++ b/astToolFactory/datacenter/dataframeViewer.ipynb
@@ -18,7 +18,7 @@
     "from astToolFactory import settingsManufacturing\n",
     "import pandas\n",
     "\n",
-    "dataframe: pandas.DataFrame = pandas.read_pickle(settingsManufacturing.pathFilenameDataframeAST)\n"
+    "dataframe: pandas.DataFrame = pandas.read_pickle(settingsManufacturing.pathFilenameDataframeAST)  # ty:ignore[invalid-assignment]\n"
    ]
   },
   {
@@ -91,7 +91,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.14.2)",
+   "display_name": ".venv (3.14.3)",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.14.3"
   }
  },
  "nbformat": 4,
